# cdisc_openapi_sdks

./: ApiServiceBinder.ts  CDASHImplementationGuideCDASHIGApi.ts  CMakeLists.txt  Cargo.toml  ClinicalDataAcquisitionStandardsHarmonizationCDASHApi.ts  ControlledTerminologyCTApi.jmx  DefaultApi.ts  MeasuresApi.csv  NAMESPACE  SDTMImplementationGuideSDTMIGApi.jmx  SENDImplementationGuideSENDIGApi.csv  SENDImplementationGuideSENDIGApi.ts  StatusesApi.ts  StudyDataTabulationModelSDTMApi.csv  StudyDataTabulationModelSDTMApi.jmx  api.ts  api_default.go  api_measures.go  api_sdtm_implementation_guide_sdtmig.go  api_searches.go  api_statuses.go  base.ts  build.gradle  client.go  client.sh  common.ts  configuration.ts  model_adam_datastructure_links.go  model_adam_datastructure_ref_element.go  model_adam_datastructure_variables.go  model_adam_product_datastructures.go  model_adam_product_links.go  model_adam_product_ref.go  model_adam_product_ref_element.go  model_adam_variable.go  model_adam_variable_links.go  model_adam_variable_ref_element.go  model_adam_varset_links.go  model_adam_varset_ref.go  model_cdash_class_domains.go  (+213 more)
client/: CMakeLists.txt  OAIAbout.h  OAIAboutLinks.h  OAIAboutRef.cpp  OAIAdamDatastructureLinks.cpp  OAIAdamDatastructureRef.cpp  OAIAdamDatastructureRef.h  OAIAdamDatastructureRefElement.cpp  OAIAdamDatastructureRefElement.h  OAIAdamDatastructureVariablesLinks.cpp  OAIAdamDatastructureVariablesLinks.h  OAIAdamDatastructureVarsets.cpp  OAIAdamDatastructureVarsets.h  OAIAdamDatastructureVarsetsLinks.cpp  OAIAdamProduct.cpp  OAIAdamProduct.h  OAIAdamProductDatastructures.h  OAIAdamProductDatastructuresLinks.cpp  OAIAdamProductLinks.cpp  OAIAdamProductRef.cpp  OAIAdamProductRefElement.h  OAIAdamVariable.h  OAIAdamVariableLinks.h  OAIAdamVariableRef.cpp  OAIAdamVariableRefElement.cpp  OAIAdamVarset.cpp  OAIAdamVarsetLinks.cpp  OAIAdamVarsetRef.h  OAIAnalysisDataModelAndImplementationGuideADaMAndADaMIGApi.cpp  OAICDASHImplementationGuideCDASHIGApi.cpp  OAICdashClassDomains.cpp  OAICdashClassDomainsRef.cpp  OAICdashClassDomainsRef.h  OAICdashClassField.cpp  OAICdashClassFieldLinks.h  OAICdashClassFieldRefVersion.h  OAICdashClassLinks.h  OAICdashClassRef.cpp  OAICdashClassRef.h  OAICdashClassRefElement.h  (+405 more)
client/ada/: defaultpackage.gpr
client/ada/src/: .ads
client/android/: README.md
client/apex/: README.md
client/bash/: Dockerfile  README.md  _client.sh  client.sh.bash-completion
client/c/: CMakeLists.txt  README.md
client/clojure/: project.clj
client/cpp-oatpp-client/: README.md  main-api-client.cpp
client/cpp-qt-client/: README.md
client/cpp-restsdk/: README.md
client/csharp/: Org.OpenAPITools.sln
client/dart/: README.md
client/dart-dio/: README.md
client/eiffel/: README.md  api_client.ecf
client/elixir/: README.md  mix.exs
client/elm/: README.md
client/gdscript/: README.md
client/go/: README.md  api_analysis_data_model_and_implementation_guide_ada_m_and_ada_mig.go  api_cdash_implementation_guide_cdashig.go  api_clinical_data_acquisition_standards_harmonization_cdash.go  api_controlled_terminology_ct.go  api_send_implementation_guide_sendig.go  api_study_data_tabulation_model_sdtm.go  configuration.go  model__mdr_search_scopes_get_200_response.go  model_about.go  model_about_links.go  model_about_ref.go  model_adam_datastructure.go  model_adam_datastructure_ref.go  model_adam_datastructure_variables_links.go  model_adam_datastructure_variables_ref.go  model_adam_datastructure_varsets.go  model_adam_datastructure_varsets_links.go  model_adam_datastructure_varsets_ref.go  model_adam_product.go  model_adam_product_datastructures_links.go  model_adam_product_datastructures_ref.go  model_adam_variable_ref.go  model_adam_varset.go  model_adam_varset_ref_element.go  model_cdash_class.go  model_cdash_class_domains_links.go  model_cdash_class_domains_ref.go  model_cdash_class_field_links.go  model_cdash_class_field_ref.go  model_cdash_class_ref.go  model_cdash_domain.go  model_cdash_domain_field_ref_version.go  model_cdash_domain_fields.go  model_cdash_domain_fields_ref.go  model_cdash_domain_links.go  model_cdash_domain_ref.go  model_cdash_domain_ref_element.go  model_cdash_product_classes.go  model_cdash_product_classes_ref.go  (+175 more)
client/groovy/: README.md  build.gradle
client/haskell-http-client/: README.md  cdisc-library.cabal  openapi.yaml
client/java/: README.md  build.sbt  pom.xml
client/javascript/: README.md  package.json
client/javascript-flowtyped/: README.md  package.json
client/jaxrs-cxf-client/: pom.xml
client/jmeter/: AnalysisDataModelAndImplementationGuideADaMAndADaMIGApi.csv  AnalysisDataModelAndImplementationGuideADaMAndADaMIGApi.jmx  CDASHImplementationGuideCDASHIGApi.csv  CDASHImplementationGuideCDASHIGApi.jmx  ClinicalDataAcquisitionStandardsHarmonizationCDASHApi.csv  ClinicalDataAcquisitionStandardsHarmonizationCDASHApi.jmx  ControlledTerminologyCTApi.csv  DefaultApi.jmx  MeasuresApi.jmx  SENDImplementationGuideSENDIGApi.jmx  SearchesApi.csv  SearchesApi.jmx  StatusesApi.jmx
client/kotlin/: README.md
client/objc/: OpenAPIClient.podspec  README.md
client/ocaml/: README.md
client/perl/: README.md
client/php/: README.md  composer.json
client/python/: README.md  pyproject.toml  setup.py
client/python-pydantic-v1/: README.md  pyproject.toml
client/r/: DESCRIPTION  README.md
client/ruby/: README.md  openapi_client.gemspec
client/rust/: README.md
client/scala-akka/: README.md
client/scala-pekko/: README.md
client/scala-sttp/: README.md
client/swift5/: README.md
client/typescript-angular/: README.md  api.base.service.ts  configuration.ts
client/typescript-aurelia/: AnalysisDataModelAndImplementationGuideADaMAndADaMIGApi.ts  Api.ts  AuthStorage.ts  ControlledTerminologyCTApi.ts  MeasuresApi.ts  SDTMImplementationGuideSDTMIGApi.ts  SearchesApi.ts  StudyDataTabulationModelSDTMApi.ts  index.ts  models.ts
client/typescript-axios/: index.ts
client/typescript-fetch/: runtime.ts
client/typescript-rxjs/: runtime.ts
client/xojo-client/: OpenAPIClient.xojo_project  README.md
(+32092 files in other folders)
