[package]
name = "openapi"
version = "1.1.0"
authors = ["cdisc_library_support@cdisc.org"]
description = "REST API Documentation for CDISC Library in production server"
license = "License for CDISC Members &amp; Open Source Developers"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
