cmake_minimum_required(VERSION 3.5)

project(QtOpenAPIClient)

set(CMAKE_AUTOMOC ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network Gui)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Network Gui)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

add_library(${PROJECT_NAME}
  OAIAbout.h
  OAIAboutLinks.h
  OAIAboutRef.h
  OAIAdamDatastructure.h
  OAIAdamDatastructureLinks.h
  OAIAdamDatastructureRef.h
  OAIAdamDatastructureRefElement.h
  OAIAdamDatastructureVariables.h
  OAIAdamDatastructureVariablesLinks.h
  OAIAdamDatastructureVariablesRef.h
  OAIAdamDatastructureVarsets.h
  OAIAdamDatastructureVarsetsLinks.h
  OAIAdamDatastructureVarsetsRef.h
  OAIAdamProduct.h
  OAIAdamProductDatastructures.h
  OAIAdamProductDatastructuresLinks.h
  OAIAdamProductDatastructuresRef.h
  OAIAdamProductLinks.h
  OAIAdamProductRef.h
  OAIAdamProductRefElement.h
  OAIAdamVariable.h
  OAIAdamVariableLinks.h
  OAIAdamVariableRef.h
  OAIAdamVariableRefElement.h
  OAIAdamVarset.h
  OAIAdamVarsetLinks.h
  OAIAdamVarsetRef.h
  OAIAdamVarsetRefElement.h
  OAICdashClass.h
  OAICdashClassDomains.h
  OAICdashClassDomainsLinks.h
  OAICdashClassDomainsRef.h
  OAICdashClassField.h
  OAICdashClassFieldLinks.h
  OAICdashClassFieldRef.h
  OAICdashClassFieldRefVersion.h
  OAICdashClassLinks.h
  OAICdashClassRef.h
  OAICdashClassRefElement.h
  OAICdashDomain.h
  OAICdashDomainField.h
  OAICdashDomainFieldLinks.h
  OAICdashDomainFieldRef.h
  OAICdashDomainFieldRefElement.h
  OAICdashDomainFieldRefVersion.h
  OAICdashDomainFields.h
  OAICdashDomainFieldsLinks.h
  OAICdashDomainFieldsRef.h
  OAICdashDomainLinks.h
  OAICdashDomainRef.h
  OAICdashDomainRefElement.h
  OAICdashProduct.h
  OAICdashProductClasses.h
  OAICdashProductClassesLinks.h
  OAICdashProductClassesRef.h
  OAICdashProductDomains.h
  OAICdashProductDomainsLinks.h
  OAICdashProductDomainsRef.h
  OAICdashProductLinks.h
  OAICdashProductRef.h
  OAICdashProductRefElement.h
  OAICdashigClass.h
  OAICdashigClassDomains.h
  OAICdashigClassDomainsLinks.h
  OAICdashigClassDomainsRef.h
  OAICdashigClassLinks.h
  OAICdashigClassRef.h
  OAICdashigClassRefElement.h
  OAICdashigClassRefSubclass.h
  OAICdashigClassScenarios.h
  OAICdashigClassScenariosLinks.h
  OAICdashigClassScenariosRef.h
  OAICdashigDomain.h
  OAICdashigDomainField.h
  OAICdashigDomainFieldLinks.h
  OAICdashigDomainFieldRef.h
  OAICdashigDomainFieldRefElement.h
  OAICdashigDomainFieldRefVersion.h
  OAICdashigDomainFields.h
  OAICdashigDomainFieldsLinks.h
  OAICdashigDomainFieldsRef.h
  OAICdashigDomainLinks.h
  OAICdashigDomainRef.h
  OAICdashigDomainRefElement.h
  OAICdashigProduct.h
  OAICdashigProductClasses.h
  OAICdashigProductClassesLinks.h
  OAICdashigProductClassesRef.h
  OAICdashigProductDomains.h
  OAICdashigProductDomainsLinks.h
  OAICdashigProductDomainsRef.h
  OAICdashigProductLinks.h
  OAICdashigProductRef.h
  OAICdashigProductRefElement.h
  OAICdashigProductScenarios.h
  OAICdashigProductScenariosLinks.h
  OAICdashigProductScenariosRef.h
  OAICdashigScenario.h
  OAICdashigScenarioField.h
  OAICdashigScenarioFieldLinks.h
  OAICdashigScenarioFieldRef.h
  OAICdashigScenarioFieldRefElement.h
  OAICdashigScenarioFieldRefVersion.h
  OAICdashigScenarioFields.h
  OAICdashigScenarioFieldsLinks.h
  OAICdashigScenarioFieldsRef.h
  OAICdashigScenarioLinks.h
  OAICdashigScenarioRef.h
  OAICdashigScenarioRefElement.h
  OAICtCodelist.h
  OAICtCodelistLinks.h
  OAICtCodelistRef.h
  OAICtCodelistRefElement.h
  OAICtCodelistRefVersion.h
  OAICtCodelistTerms.h
  OAICtCodelistTermsLinks.h
  OAICtCodelistTermsRef.h
  OAICtPackage.h
  OAICtPackageCodelists.h
  OAICtPackageCodelistsLinks.h
  OAICtPackageCodelistsRef.h
  OAICtPackageLinks.h
  OAICtPackageRef.h
  OAICtPackageRefElement.h
  OAICtPackageTerm.h
  OAICtPackages.h
  OAICtPackagesLinks.h
  OAICtPackagesRef.h
  OAICtTerm.h
  OAICtTermLinks.h
  OAICtTermRef.h
  OAICtTermRefElement.h
  OAICtTermRefVersion.h
  OAIDefaultErrorResponse.h
  OAIDefaultSearchResponse.h
  OAIDefaultSearchResponse_hits_inner.h
  OAIDefaultSearchScopes.h
  OAIExportAdamDatastructuresRow.h
  OAIExportAdamDatastructuresTable.h
  OAIExportAdamVariablesRow.h
  OAIExportAdamVariablesTable.h
  OAIExportAdamWorkbook.h
  OAIExportCdashClassVariablesRow.h
  OAIExportCdashDomainVariablesRow.h
  OAIExportCdashTable.h
  OAIExportCdashigDomainVariablesRow.h
  OAIExportCdashigScenarioVariablesRow.h
  OAIExportCdashigTable.h
  OAIExportCtCodelist.h
  OAIExportCtTable.h
  OAIExportCtTerm.h
  OAIExportQrsCsvItemsRow.h
  OAIExportQrsGeneral.h
  OAIExportQrsItemsTable.h
  OAIExportQrsResponses.h
  OAIExportQrsWorkbook.h
  OAIExportQrsWorkbookItemsRow.h
  OAIExportSdtmClassVariablesRow.h
  OAIExportSdtmDatasetVariablesRow.h
  OAIExportSdtmDatasetsRow.h
  OAIExportSdtmDatasetsTable.h
  OAIExportSdtmVariablesTable.h
  OAIExportSdtmWorkbook.h
  OAIExportSdtmigDatasetsRow.h
  OAIExportSdtmigDatasetsTable.h
  OAIExportSdtmigVariablesRow.h
  OAIExportSdtmigVariablesTable.h
  OAIExportSdtmigWorkbook.h
  OAIExportSendigDatasetsRow.h
  OAIExportSendigDatasetsTable.h
  OAIExportSendigVariablesRow.h
  OAIExportSendigVariablesTable.h
  OAIExportSendigWorkbook.h
  OAIHealth.h
  OAILastupdated.h
  OAILastupdatedLinks.h
  OAILastupdatedRef.h
  OAIMaintenanceBody.h
  OAIProductgroupDataAnalysis.h
  OAIProductgroupDataAnalysisLinks.h
  OAIProductgroupDataCollection.h
  OAIProductgroupDataCollectionLinks.h
  OAIProductgroupDataTabulation.h
  OAIProductgroupDataTabulationLinks.h
  OAIProductgroupQrs.h
  OAIProductgroupQrsLinks.h
  OAIProductgroupRef.h
  OAIProductgroupTerminology.h
  OAIProductgroupTerminologyLinks.h
  OAIProducts.h
  OAIProductsLinks.h
  OAIProductsRef.h
  OAIQrsItem.h
  OAIQrsItemLinks.h
  OAIQrsItemRefElement.h
  OAIQrsItems.h
  OAIQrsItemsLinks.h
  OAIQrsItemsRef.h
  OAIQrsProduct.h
  OAIQrsProductLinks.h
  OAIQrsProductRef.h
  OAIQrsRefElement.h
  OAIQrsResponseLinks.h
  OAIQrsResponsegroup.h
  OAIQrsResponsegroupLinks.h
  OAIQrsResponsegroupRef.h
  OAIQrsResponsegroupRefElement.h
  OAIQrsResponsegroups.h
  OAIQrsResponsegroupsLinks.h
  OAIQrsResponsegroupsRef.h
  OAIQrsResponses.h
  OAIRootCdashClassField.h
  OAIRootCdashClassFieldLinks.h
  OAIRootCdashClassFieldRef.h
  OAIRootCdashDomainField.h
  OAIRootCdashDomainFieldLinks.h
  OAIRootCdashDomainFieldRef.h
  OAIRootCdashigDomainField.h
  OAIRootCdashigDomainFieldLinks.h
  OAIRootCdashigDomainFieldRef.h
  OAIRootCdashigScenarioField.h
  OAIRootCdashigScenarioFieldLinks.h
  OAIRootCdashigScenarioFieldRef.h
  OAIRootCtCodelist.h
  OAIRootCtCodelistLinks.h
  OAIRootCtCodelistRef.h
  OAIRootCtCodelistRefElement.h
  OAIRootCtTerm.h
  OAIRootCtTermLinks.h
  OAIRootCtTermRef.h
  OAIRootSdtmClassVariable.h
  OAIRootSdtmClassVariableLinks.h
  OAIRootSdtmClassVariableRef.h
  OAIRootSdtmDatasetVariable.h
  OAIRootSdtmDatasetVariableLinks.h
  OAIRootSdtmDatasetVariableRef.h
  OAIRootSdtmigDatasetVariable.h
  OAIRootSdtmigDatasetVariableLinks.h
  OAIRootSdtmigDatasetVariableRef.h
  OAIRootSendigDatasetVariable.h
  OAIRootSendigDatasetVariableLinks.h
  OAIRootSendigDatasetVariableRef.h
  OAIScopeValues.h
  OAISdtmClass.h
  OAISdtmClassDatasets.h
  OAISdtmClassDatasetsLinks.h
  OAISdtmClassDatasetsRef.h
  OAISdtmClassLinks.h
  OAISdtmClassRef.h
  OAISdtmClassRefElement.h
  OAISdtmClassRefSubclass.h
  OAISdtmClassVariable.h
  OAISdtmClassVariableLinks.h
  OAISdtmClassVariableRef.h
  OAISdtmClassVariableRefElement.h
  OAISdtmClassVariableRefQualifies.h
  OAISdtmClassVariableRefTarget.h
  OAISdtmClassVariableRefVersion.h
  OAISdtmClassVariables.h
  OAISdtmClassVariablesLinks.h
  OAISdtmClassVariablesRef.h
  OAISdtmClasses.h
  OAISdtmClassesLinks.h
  OAISdtmClassesRef.h
  OAISdtmDataset.h
  OAISdtmDatasetLinks.h
  OAISdtmDatasetRef.h
  OAISdtmDatasetRefElement.h
  OAISdtmDatasetVariable.h
  OAISdtmDatasetVariableLinks.h
  OAISdtmDatasetVariableRef.h
  OAISdtmDatasetVariableRefElement.h
  OAISdtmDatasetVariableRefTarget.h
  OAISdtmDatasetVariableRefVersion.h
  OAISdtmDatasetVariables.h
  OAISdtmDatasetVariablesLinks.h
  OAISdtmDatasetVariablesRef.h
  OAISdtmDatasets.h
  OAISdtmDatasetsLinks.h
  OAISdtmDatasetsRef.h
  OAISdtmProduct.h
  OAISdtmProductLinks.h
  OAISdtmProductRef.h
  OAISdtmProductRefElement.h
  OAISdtmigClass.h
  OAISdtmigClassDatasets.h
  OAISdtmigClassDatasetsLinks.h
  OAISdtmigClassDatasetsRef.h
  OAISdtmigClassLinks.h
  OAISdtmigClassRef.h
  OAISdtmigClassRefElement.h
  OAISdtmigClassRefSubclass.h
  OAISdtmigClasses.h
  OAISdtmigClassesLinks.h
  OAISdtmigClassesRef.h
  OAISdtmigDataset.h
  OAISdtmigDatasetLinks.h
  OAISdtmigDatasetRef.h
  OAISdtmigDatasetRefElement.h
  OAISdtmigDatasetVariable.h
  OAISdtmigDatasetVariableLinks.h
  OAISdtmigDatasetVariableRef.h
  OAISdtmigDatasetVariableRefElement.h
  OAISdtmigDatasetVariableRefTarget.h
  OAISdtmigDatasetVariableRefVersion.h
  OAISdtmigDatasetVariables.h
  OAISdtmigDatasetVariablesLinks.h
  OAISdtmigDatasetVariablesRef.h
  OAISdtmigDatasets.h
  OAISdtmigDatasetsLinks.h
  OAISdtmigDatasetsRef.h
  OAISdtmigProduct.h
  OAISdtmigProductLinks.h
  OAISdtmigProductRef.h
  OAISdtmigProductRefElement.h
  OAISendigClass.h
  OAISendigClassDatasets.h
  OAISendigClassDatasetsLinks.h
  OAISendigClassDatasetsRef.h
  OAISendigClassLinks.h
  OAISendigClassRef.h
  OAISendigClassRefElement.h
  OAISendigClassRefSubclass.h
  OAISendigClasses.h
  OAISendigClassesLinks.h
  OAISendigClassesRef.h
  OAISendigDataset.h
  OAISendigDatasetLinks.h
  OAISendigDatasetRef.h
  OAISendigDatasetRefElement.h
  OAISendigDatasetVariable.h
  OAISendigDatasetVariableLinks.h
  OAISendigDatasetVariableRef.h
  OAISendigDatasetVariableRefElement.h
  OAISendigDatasetVariableRefVersion.h
  OAISendigDatasetVariables.h
  OAISendigDatasetVariablesLinks.h
  OAISendigDatasetVariablesRef.h
  OAISendigDatasets.h
  OAISendigDatasetsLinks.h
  OAISendigDatasetsRef.h
  OAISendigProduct.h
  OAISendigProductLinks.h
  OAISendigProductRef.h
  OAISendigProductRefElement.h
  OAIXmlAbout.h
  OAIXmlAdamDatastructure.h
  OAIXmlAdamDatastructureVariables.h
  OAIXmlAdamDatastructureVarsets.h
  OAIXmlAdamProduct.h
  OAIXmlAdamProductDatastructures.h
  OAIXmlAdamVariable.h
  OAIXmlAdamVarset.h
  OAIXmlCdashClass.h
  OAIXmlCdashClassDomains.h
  OAIXmlCdashClassField.h
  OAIXmlCdashDomain.h
  OAIXmlCdashDomainField.h
  OAIXmlCdashDomainFields.h
  OAIXmlCdashProduct.h
  OAIXmlCdashProductClasses.h
  OAIXmlCdashProductDomains.h
  OAIXmlCdashigClass.h
  OAIXmlCdashigClassDomains.h
  OAIXmlCdashigClassScenarios.h
  OAIXmlCdashigDomain.h
  OAIXmlCdashigDomainField.h
  OAIXmlCdashigDomainFields.h
  OAIXmlCdashigProduct.h
  OAIXmlCdashigProductClasses.h
  OAIXmlCdashigProductDomains.h
  OAIXmlCdashigProductScenarios.h
  OAIXmlCdashigScenario.h
  OAIXmlCdashigScenarioField.h
  OAIXmlCdashigScenarioFields.h
  OAIXmlCtCodelist.h
  OAIXmlCtCodelistTerms.h
  OAIXmlCtPackage.h
  OAIXmlCtPackageCodelists.h
  OAIXmlCtPackages.h
  OAIXmlCtTerm.h
  OAIXmlLastupdated.h
  OAIXmlProductgroupDataAnalysis.h
  OAIXmlProductgroupDataCollection.h
  OAIXmlProductgroupDataTabulation.h
  OAIXmlProductgroupTerminology.h
  OAIXmlProducts.h
  OAIXmlQrsItem.h
  OAIXmlQrsItems.h
  OAIXmlQrsProduct.h
  OAIXmlQrsResponsegroup.h
  OAIXmlQrsResponsegroups.h
  OAIXmlRootCdashClassField.h
  OAIXmlRootCdashDomainField.h
  OAIXmlRootCdashigDomainField.h
  OAIXmlRootCdashigScenarioField.h
  OAIXmlRootCtCodelist.h
  OAIXmlRootCtTerm.h
  OAIXmlRootSdtmClassVariable.h
  OAIXmlRootSdtmDatasetVariable.h
  OAIXmlRootSdtmigDatasetVariable.h
  OAIXmlRootSendigDatasetVariable.h
  OAIXmlSdtmClass.h
  OAIXmlSdtmClassDatasets.h
  OAIXmlSdtmClassVariable.h
  OAIXmlSdtmClassVariables.h
  OAIXmlSdtmClasses.h
  OAIXmlSdtmDataset.h
  OAIXmlSdtmDatasetVariable.h
  OAIXmlSdtmDatasetVariables.h
  OAIXmlSdtmDatasets.h
  OAIXmlSdtmProduct.h
  OAIXmlSdtmigClass.h
  OAIXmlSdtmigClassDatasets.h
  OAIXmlSdtmigClasses.h
  OAIXmlSdtmigDataset.h
  OAIXmlSdtmigDatasetVariable.h
  OAIXmlSdtmigDatasetVariables.h
  OAIXmlSdtmigDatasets.h
  OAIXmlSdtmigProduct.h
  OAIXmlSendigClass.h
  OAIXmlSendigClassDatasets.h
  OAIXmlSendigClasses.h
  OAIXmlSendigDataset.h
  OAIXmlSendigDatasetVariable.h
  OAIXmlSendigDatasetVariables.h
  OAIXmlSendigDatasets.h
  OAIXmlSendigProduct.h
  OAI_mdr_search_scopes_get_200_response.h
  OAIAnalysisDataModelAndImplementationGuideADaMAndADaMIGApi.h
  OAICDASHImplementationGuideCDASHIGApi.h
  OAIClinicalDataAcquisitionStandardsHarmonizationCDASHApi.h
  OAIControlledTerminologyCTApi.h
  OAIDefaultApi.h
  OAIMeasuresApi.h
  OAISDTMImplementationGuideSDTMIGApi.h
  OAISENDImplementationGuideSENDIGApi.h
  OAISearchesApi.h
  OAIStatusesApi.h
  OAIStudyDataTabulationModelSDTMApi.h
  OAIHelpers.h
  OAIHttpRequest.h
  OAIObject.h
  OAIEnum.h
  OAIHttpFileElement.h
  OAIServerConfiguration.h
  OAIServerVariable.h
  OAIOauth.h
  OAIAbout.cpp
  OAIAboutLinks.cpp
  OAIAboutRef.cpp
  OAIAdamDatastructure.cpp
  OAIAdamDatastructureLinks.cpp
  OAIAdamDatastructureRef.cpp
  OAIAdamDatastructureRefElement.cpp
  OAIAdamDatastructureVariables.cpp
  OAIAdamDatastructureVariablesLinks.cpp
  OAIAdamDatastructureVariablesRef.cpp
  OAIAdamDatastructureVarsets.cpp
  OAIAdamDatastructureVarsetsLinks.cpp
  OAIAdamDatastructureVarsetsRef.cpp
  OAIAdamProduct.cpp
  OAIAdamProductDatastructures.cpp
  OAIAdamProductDatastructuresLinks.cpp
  OAIAdamProductDatastructuresRef.cpp
  OAIAdamProductLinks.cpp
  OAIAdamProductRef.cpp
  OAIAdamProductRefElement.cpp
  OAIAdamVariable.cpp
  OAIAdamVariableLinks.cpp
  OAIAdamVariableRef.cpp
  OAIAdamVariableRefElement.cpp
  OAIAdamVarset.cpp
  OAIAdamVarsetLinks.cpp
  OAIAdamVarsetRef.cpp
  OAIAdamVarsetRefElement.cpp
  OAICdashClass.cpp
  OAICdashClassDomains.cpp
  OAICdashClassDomainsLinks.cpp
  OAICdashClassDomainsRef.cpp
  OAICdashClassField.cpp
  OAICdashClassFieldLinks.cpp
  OAICdashClassFieldRef.cpp
  OAICdashClassFieldRefVersion.cpp
  OAICdashClassLinks.cpp
  OAICdashClassRef.cpp
  OAICdashClassRefElement.cpp
  OAICdashDomain.cpp
  OAICdashDomainField.cpp
  OAICdashDomainFieldLinks.cpp
  OAICdashDomainFieldRef.cpp
  OAICdashDomainFieldRefElement.cpp
  OAICdashDomainFieldRefVersion.cpp
  OAICdashDomainFields.cpp
  OAICdashDomainFieldsLinks.cpp
  OAICdashDomainFieldsRef.cpp
  OAICdashDomainLinks.cpp
  OAICdashDomainRef.cpp
  OAICdashDomainRefElement.cpp
  OAICdashProduct.cpp
  OAICdashProductClasses.cpp
  OAICdashProductClassesLinks.cpp
  OAICdashProductClassesRef.cpp
  OAICdashProductDomains.cpp
  OAICdashProductDomainsLinks.cpp
  OAICdashProductDomainsRef.cpp
  OAICdashProductLinks.cpp
  OAICdashProductRef.cpp
  OAICdashProductRefElement.cpp
  OAICdashigClass.cpp
  OAICdashigClassDomains.cpp
  OAICdashigClassDomainsLinks.cpp
  OAICdashigClassDomainsRef.cpp
  OAICdashigClassLinks.cpp
  OAICdashigClassRef.cpp
  OAICdashigClassRefElement.cpp
  OAICdashigClassRefSubclass.cpp
  OAICdashigClassScenarios.cpp
  OAICdashigClassScenariosLinks.cpp
  OAICdashigClassScenariosRef.cpp
  OAICdashigDomain.cpp
  OAICdashigDomainField.cpp
  OAICdashigDomainFieldLinks.cpp
  OAICdashigDomainFieldRef.cpp
  OAICdashigDomainFieldRefElement.cpp
  OAICdashigDomainFieldRefVersion.cpp
  OAICdashigDomainFields.cpp
  OAICdashigDomainFieldsLinks.cpp
  OAICdashigDomainFieldsRef.cpp
  OAICdashigDomainLinks.cpp
  OAICdashigDomainRef.cpp
  OAICdashigDomainRefElement.cpp
  OAICdashigProduct.cpp
  OAICdashigProductClasses.cpp
  OAICdashigProductClassesLinks.cpp
  OAICdashigProductClassesRef.cpp
  OAICdashigProductDomains.cpp
  OAICdashigProductDomainsLinks.cpp
  OAICdashigProductDomainsRef.cpp
  OAICdashigProductLinks.cpp
  OAICdashigProductRef.cpp
  OAICdashigProductRefElement.cpp
  OAICdashigProductScenarios.cpp
  OAICdashigProductScenariosLinks.cpp
  OAICdashigProductScenariosRef.cpp
  OAICdashigScenario.cpp
  OAICdashigScenarioField.cpp
  OAICdashigScenarioFieldLinks.cpp
  OAICdashigScenarioFieldRef.cpp
  OAICdashigScenarioFieldRefElement.cpp
  OAICdashigScenarioFieldRefVersion.cpp
  OAICdashigScenarioFields.cpp
  OAICdashigScenarioFieldsLinks.cpp
  OAICdashigScenarioFieldsRef.cpp
  OAICdashigScenarioLinks.cpp
  OAICdashigScenarioRef.cpp
  OAICdashigScenarioRefElement.cpp
  OAICtCodelist.cpp
  OAICtCodelistLinks.cpp
  OAICtCodelistRef.cpp
  OAICtCodelistRefElement.cpp
  OAICtCodelistRefVersion.cpp
  OAICtCodelistTerms.cpp
  OAICtCodelistTermsLinks.cpp
  OAICtCodelistTermsRef.cpp
  OAICtPackage.cpp
  OAICtPackageCodelists.cpp
  OAICtPackageCodelistsLinks.cpp
  OAICtPackageCodelistsRef.cpp
  OAICtPackageLinks.cpp
  OAICtPackageRef.cpp
  OAICtPackageRefElement.cpp
  OAICtPackageTerm.cpp
  OAICtPackages.cpp
  OAICtPackagesLinks.cpp
  OAICtPackagesRef.cpp
  OAICtTerm.cpp
  OAICtTermLinks.cpp
  OAICtTermRef.cpp
  OAICtTermRefElement.cpp
  OAICtTermRefVersion.cpp
  OAIDefaultErrorResponse.cpp
  OAIDefaultSearchResponse.cpp
  OAIDefaultSearchResponse_hits_inner.cpp
  OAIDefaultSearchScopes.cpp
  OAIExportAdamDatastructuresRow.cpp
  OAIExportAdamDatastructuresTable.cpp
  OAIExportAdamVariablesRow.cpp
  OAIExportAdamVariablesTable.cpp
  OAIExportAdamWorkbook.cpp
  OAIExportCdashClassVariablesRow.cpp
  OAIExportCdashDomainVariablesRow.cpp
  OAIExportCdashTable.cpp
  OAIExportCdashigDomainVariablesRow.cpp
  OAIExportCdashigScenarioVariablesRow.cpp
  OAIExportCdashigTable.cpp
  OAIExportCtCodelist.cpp
  OAIExportCtTable.cpp
  OAIExportCtTerm.cpp
  OAIExportQrsCsvItemsRow.cpp
  OAIExportQrsGeneral.cpp
  OAIExportQrsItemsTable.cpp
  OAIExportQrsResponses.cpp
  OAIExportQrsWorkbook.cpp
  OAIExportQrsWorkbookItemsRow.cpp
  OAIExportSdtmClassVariablesRow.cpp
  OAIExportSdtmDatasetVariablesRow.cpp
  OAIExportSdtmDatasetsRow.cpp
  OAIExportSdtmDatasetsTable.cpp
  OAIExportSdtmVariablesTable.cpp
  OAIExportSdtmWorkbook.cpp
  OAIExportSdtmigDatasetsRow.cpp
  OAIExportSdtmigDatasetsTable.cpp
  OAIExportSdtmigVariablesRow.cpp
  OAIExportSdtmigVariablesTable.cpp
  OAIExportSdtmigWorkbook.cpp
  OAIExportSendigDatasetsRow.cpp
  OAIExportSendigDatasetsTable.cpp
  OAIExportSendigVariablesRow.cpp
  OAIExportSendigVariablesTable.cpp
  OAIExportSendigWorkbook.cpp
  OAIHealth.cpp
  OAILastupdated.cpp
  OAILastupdatedLinks.cpp
  OAILastupdatedRef.cpp
  OAIMaintenanceBody.cpp
  OAIProductgroupDataAnalysis.cpp
  OAIProductgroupDataAnalysisLinks.cpp
  OAIProductgroupDataCollection.cpp
  OAIProductgroupDataCollectionLinks.cpp
  OAIProductgroupDataTabulation.cpp
  OAIProductgroupDataTabulationLinks.cpp
  OAIProductgroupQrs.cpp
  OAIProductgroupQrsLinks.cpp
  OAIProductgroupRef.cpp
  OAIProductgroupTerminology.cpp
  OAIProductgroupTerminologyLinks.cpp
  OAIProducts.cpp
  OAIProductsLinks.cpp
  OAIProductsRef.cpp
  OAIQrsItem.cpp
  OAIQrsItemLinks.cpp
  OAIQrsItemRefElement.cpp
  OAIQrsItems.cpp
  OAIQrsItemsLinks.cpp
  OAIQrsItemsRef.cpp
  OAIQrsProduct.cpp
  OAIQrsProductLinks.cpp
  OAIQrsProductRef.cpp
  OAIQrsRefElement.cpp
  OAIQrsResponseLinks.cpp
  OAIQrsResponsegroup.cpp
  OAIQrsResponsegroupLinks.cpp
  OAIQrsResponsegroupRef.cpp
  OAIQrsResponsegroupRefElement.cpp
  OAIQrsResponsegroups.cpp
  OAIQrsResponsegroupsLinks.cpp
  OAIQrsResponsegroupsRef.cpp
  OAIQrsResponses.cpp
  OAIRootCdashClassField.cpp
  OAIRootCdashClassFieldLinks.cpp
  OAIRootCdashClassFieldRef.cpp
  OAIRootCdashDomainField.cpp
  OAIRootCdashDomainFieldLinks.cpp
  OAIRootCdashDomainFieldRef.cpp
  OAIRootCdashigDomainField.cpp
  OAIRootCdashigDomainFieldLinks.cpp
  OAIRootCdashigDomainFieldRef.cpp
  OAIRootCdashigScenarioField.cpp
  OAIRootCdashigScenarioFieldLinks.cpp
  OAIRootCdashigScenarioFieldRef.cpp
  OAIRootCtCodelist.cpp
  OAIRootCtCodelistLinks.cpp
  OAIRootCtCodelistRef.cpp
  OAIRootCtCodelistRefElement.cpp
  OAIRootCtTerm.cpp
  OAIRootCtTermLinks.cpp
  OAIRootCtTermRef.cpp
  OAIRootSdtmClassVariable.cpp
  OAIRootSdtmClassVariableLinks.cpp
  OAIRootSdtmClassVariableRef.cpp
  OAIRootSdtmDatasetVariable.cpp
  OAIRootSdtmDatasetVariableLinks.cpp
  OAIRootSdtmDatasetVariableRef.cpp
  OAIRootSdtmigDatasetVariable.cpp
  OAIRootSdtmigDatasetVariableLinks.cpp
  OAIRootSdtmigDatasetVariableRef.cpp
  OAIRootSendigDatasetVariable.cpp
  OAIRootSendigDatasetVariableLinks.cpp
  OAIRootSendigDatasetVariableRef.cpp
  OAIScopeValues.cpp
  OAISdtmClass.cpp
  OAISdtmClassDatasets.cpp
  OAISdtmClassDatasetsLinks.cpp
  OAISdtmClassDatasetsRef.cpp
  OAISdtmClassLinks.cpp
  OAISdtmClassRef.cpp
  OAISdtmClassRefElement.cpp
  OAISdtmClassRefSubclass.cpp
  OAISdtmClassVariable.cpp
  OAISdtmClassVariableLinks.cpp
  OAISdtmClassVariableRef.cpp
  OAISdtmClassVariableRefElement.cpp
  OAISdtmClassVariableRefQualifies.cpp
  OAISdtmClassVariableRefTarget.cpp
  OAISdtmClassVariableRefVersion.cpp
  OAISdtmClassVariables.cpp
  OAISdtmClassVariablesLinks.cpp
  OAISdtmClassVariablesRef.cpp
  OAISdtmClasses.cpp
  OAISdtmClassesLinks.cpp
  OAISdtmClassesRef.cpp
  OAISdtmDataset.cpp
  OAISdtmDatasetLinks.cpp
  OAISdtmDatasetRef.cpp
  OAISdtmDatasetRefElement.cpp
  OAISdtmDatasetVariable.cpp
  OAISdtmDatasetVariableLinks.cpp
  OAISdtmDatasetVariableRef.cpp
  OAISdtmDatasetVariableRefElement.cpp
  OAISdtmDatasetVariableRefTarget.cpp
  OAISdtmDatasetVariableRefVersion.cpp
  OAISdtmDatasetVariables.cpp
  OAISdtmDatasetVariablesLinks.cpp
  OAISdtmDatasetVariablesRef.cpp
  OAISdtmDatasets.cpp
  OAISdtmDatasetsLinks.cpp
  OAISdtmDatasetsRef.cpp
  OAISdtmProduct.cpp
  OAISdtmProductLinks.cpp
  OAISdtmProductRef.cpp
  OAISdtmProductRefElement.cpp
  OAISdtmigClass.cpp
  OAISdtmigClassDatasets.cpp
  OAISdtmigClassDatasetsLinks.cpp
  OAISdtmigClassDatasetsRef.cpp
  OAISdtmigClassLinks.cpp
  OAISdtmigClassRef.cpp
  OAISdtmigClassRefElement.cpp
  OAISdtmigClassRefSubclass.cpp
  OAISdtmigClasses.cpp
  OAISdtmigClassesLinks.cpp
  OAISdtmigClassesRef.cpp
  OAISdtmigDataset.cpp
  OAISdtmigDatasetLinks.cpp
  OAISdtmigDatasetRef.cpp
  OAISdtmigDatasetRefElement.cpp
  OAISdtmigDatasetVariable.cpp
  OAISdtmigDatasetVariableLinks.cpp
  OAISdtmigDatasetVariableRef.cpp
  OAISdtmigDatasetVariableRefElement.cpp
  OAISdtmigDatasetVariableRefTarget.cpp
  OAISdtmigDatasetVariableRefVersion.cpp
  OAISdtmigDatasetVariables.cpp
  OAISdtmigDatasetVariablesLinks.cpp
  OAISdtmigDatasetVariablesRef.cpp
  OAISdtmigDatasets.cpp
  OAISdtmigDatasetsLinks.cpp
  OAISdtmigDatasetsRef.cpp
  OAISdtmigProduct.cpp
  OAISdtmigProductLinks.cpp
  OAISdtmigProductRef.cpp
  OAISdtmigProductRefElement.cpp
  OAISendigClass.cpp
  OAISendigClassDatasets.cpp
  OAISendigClassDatasetsLinks.cpp
  OAISendigClassDatasetsRef.cpp
  OAISendigClassLinks.cpp
  OAISendigClassRef.cpp
  OAISendigClassRefElement.cpp
  OAISendigClassRefSubclass.cpp
  OAISendigClasses.cpp
  OAISendigClassesLinks.cpp
  OAISendigClassesRef.cpp
  OAISendigDataset.cpp
  OAISendigDatasetLinks.cpp
  OAISendigDatasetRef.cpp
  OAISendigDatasetRefElement.cpp
  OAISendigDatasetVariable.cpp
  OAISendigDatasetVariableLinks.cpp
  OAISendigDatasetVariableRef.cpp
  OAISendigDatasetVariableRefElement.cpp
  OAISendigDatasetVariableRefVersion.cpp
  OAISendigDatasetVariables.cpp
  OAISendigDatasetVariablesLinks.cpp
  OAISendigDatasetVariablesRef.cpp
  OAISendigDatasets.cpp
  OAISendigDatasetsLinks.cpp
  OAISendigDatasetsRef.cpp
  OAISendigProduct.cpp
  OAISendigProductLinks.cpp
  OAISendigProductRef.cpp
  OAISendigProductRefElement.cpp
  OAIXmlAbout.cpp
  OAIXmlAdamDatastructure.cpp
  OAIXmlAdamDatastructureVariables.cpp
  OAIXmlAdamDatastructureVarsets.cpp
  OAIXmlAdamProduct.cpp
  OAIXmlAdamProductDatastructures.cpp
  OAIXmlAdamVariable.cpp
  OAIXmlAdamVarset.cpp
  OAIXmlCdashClass.cpp
  OAIXmlCdashClassDomains.cpp
  OAIXmlCdashClassField.cpp
  OAIXmlCdashDomain.cpp
  OAIXmlCdashDomainField.cpp
  OAIXmlCdashDomainFields.cpp
  OAIXmlCdashProduct.cpp
  OAIXmlCdashProductClasses.cpp
  OAIXmlCdashProductDomains.cpp
  OAIXmlCdashigClass.cpp
  OAIXmlCdashigClassDomains.cpp
  OAIXmlCdashigClassScenarios.cpp
  OAIXmlCdashigDomain.cpp
  OAIXmlCdashigDomainField.cpp
  OAIXmlCdashigDomainFields.cpp
  OAIXmlCdashigProduct.cpp
  OAIXmlCdashigProductClasses.cpp
  OAIXmlCdashigProductDomains.cpp
  OAIXmlCdashigProductScenarios.cpp
  OAIXmlCdashigScenario.cpp
  OAIXmlCdashigScenarioField.cpp
  OAIXmlCdashigScenarioFields.cpp
  OAIXmlCtCodelist.cpp
  OAIXmlCtCodelistTerms.cpp
  OAIXmlCtPackage.cpp
  OAIXmlCtPackageCodelists.cpp
  OAIXmlCtPackages.cpp
  OAIXmlCtTerm.cpp
  OAIXmlLastupdated.cpp
  OAIXmlProductgroupDataAnalysis.cpp
  OAIXmlProductgroupDataCollection.cpp
  OAIXmlProductgroupDataTabulation.cpp
  OAIXmlProductgroupTerminology.cpp
  OAIXmlProducts.cpp
  OAIXmlQrsItem.cpp
  OAIXmlQrsItems.cpp
  OAIXmlQrsProduct.cpp
  OAIXmlQrsResponsegroup.cpp
  OAIXmlQrsResponsegroups.cpp
  OAIXmlRootCdashClassField.cpp
  OAIXmlRootCdashDomainField.cpp
  OAIXmlRootCdashigDomainField.cpp
  OAIXmlRootCdashigScenarioField.cpp
  OAIXmlRootCtCodelist.cpp
  OAIXmlRootCtTerm.cpp
  OAIXmlRootSdtmClassVariable.cpp
  OAIXmlRootSdtmDatasetVariable.cpp
  OAIXmlRootSdtmigDatasetVariable.cpp
  OAIXmlRootSendigDatasetVariable.cpp
  OAIXmlSdtmClass.cpp
  OAIXmlSdtmClassDatasets.cpp
  OAIXmlSdtmClassVariable.cpp
  OAIXmlSdtmClassVariables.cpp
  OAIXmlSdtmClasses.cpp
  OAIXmlSdtmDataset.cpp
  OAIXmlSdtmDatasetVariable.cpp
  OAIXmlSdtmDatasetVariables.cpp
  OAIXmlSdtmDatasets.cpp
  OAIXmlSdtmProduct.cpp
  OAIXmlSdtmigClass.cpp
  OAIXmlSdtmigClassDatasets.cpp
  OAIXmlSdtmigClasses.cpp
  OAIXmlSdtmigDataset.cpp
  OAIXmlSdtmigDatasetVariable.cpp
  OAIXmlSdtmigDatasetVariables.cpp
  OAIXmlSdtmigDatasets.cpp
  OAIXmlSdtmigProduct.cpp
  OAIXmlSendigClass.cpp
  OAIXmlSendigClassDatasets.cpp
  OAIXmlSendigClasses.cpp
  OAIXmlSendigDataset.cpp
  OAIXmlSendigDatasetVariable.cpp
  OAIXmlSendigDatasetVariables.cpp
  OAIXmlSendigDatasets.cpp
  OAIXmlSendigProduct.cpp
  OAI_mdr_search_scopes_get_200_response.cpp
  OAIAnalysisDataModelAndImplementationGuideADaMAndADaMIGApi.cpp
  OAICDASHImplementationGuideCDASHIGApi.cpp
  OAIClinicalDataAcquisitionStandardsHarmonizationCDASHApi.cpp
  OAIControlledTerminologyCTApi.cpp
  OAIDefaultApi.cpp
  OAIMeasuresApi.cpp
  OAISDTMImplementationGuideSDTMIGApi.cpp
  OAISENDImplementationGuideSENDIGApi.cpp
  OAISearchesApi.cpp
  OAIStatusesApi.cpp
  OAIStudyDataTabulationModelSDTMApi.cpp
  OAIHelpers.cpp
  OAIHttpRequest.cpp
  OAIHttpFileElement.cpp
  OAIOauth.cpp
  )

target_include_directories(${PROJECT_NAME}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_link_libraries(${PROJECT_NAME}
    PUBLIC
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Network
        Qt${QT_VERSION_MAJOR}::Gui

)

configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
)

install(
    FILES ${HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)

install(
    FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)

install(
    EXPORT ${PROJECT_NAME}Targets
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)
